fixes testimoial opac layer bug, edits footer alignment

--- a/static/style.css
+++ b/static/style.css
@@ -165,12 +165,19 @@ body {
     background: url('assets/web_sprinkles_background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    min-height: 100%;
 }
 
 .ff-fp-about--opacity {
   background: rgba(255, 255, 255, 0.9);
   width: 100%;
-  height: 60%;
+}
+
+@media (min-width: 720px) {
+  .ff-fp-about--opacity {
+    height: 60%;
+
+  }
 }
 
 .ff-fp-about__header > h2{
@@ -298,17 +305,28 @@ span:nth-child(4n+1)*/
 
 .ff-fp-testimonial {
   width: 100%;
-  height: 15rem;
+  height: 20rem;
   background: yellow;
   margin: 0.5rem;
-  padding: 4.5rem 2rem;
+  /*padding: 4.5rem 2rem;*/
   font-family: 'Patrick Hand SC', cursive;
+}
+
+@media(min-width: 992px) {
+  .ff-fp-testimonial {
+    width: 45%;
+    display: inline-block;
+    position: relative;
+    vertical-align: top;
+    /*padding: 2.5rem 1rem;*/
+  }
 }
 
 .ff-fp-testimonial-opacity {
   height: 100%;
   width: 100%;
   background: rgba(131, 127, 132, 0.5);
+  display: table;
 }
 
 #testimonial1 {
@@ -337,20 +355,21 @@ span:nth-child(4n+1)*/
   background-size: cover;
 }
 
-.ff-fp-testimonial-opacity > p {
+.ff-fp-testimonial__content {
+  width: 100%;
+  height: 100%;
+  /*background: red;*/
+  padding: 1rem 0.5rem;
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.ff-fp-testimonial__content > p {
   color: #fff;
   font-size: 1.25em;
- }
-
-@media(min-width: 992px) {
-  .ff-fp-testimonial {
-    width: 45%;
-    display: inline-block;
-    position: relative;
-    vertical-align: top;
-    padding: 2.5rem 1rem;
-  }
+  margin-top: 0;
 }
+
 
 
 /* CONTACT FORM SECTION */
@@ -428,24 +447,36 @@ span:nth-child(4n+1)*/
   text-align: center;
   overflow: hidden;
   width: 100%;
+  display: table;
+  margin-top: 2.5rem;
 }
 
 .ff-footer__email {
-  display: inline-block;
-  width: 50%;
-  background: pink;
+  /*background: pink;*/
+  display: table-cell;
+  vertical-align: middle;
+  width: 25%;
 }
 
 .ff-footer__email-icon {
-
 }
 
 .ff-footer__email-text {
-  width: 50%;
-  display: inline-block;
+  display: inline;
 }
 
 .ff-footer__phone {
-  /*display: inline-block;*/
+  /*background: yellow;*/
+  display: table-cell;
+  vertical-align: middle;
+  width: 25%;
+}
+.ff-footer__phone-icon {}
+.ff-footer__phone-text {}
+
+.ff-footer__social-media {
+  /*background: purple;*/
+  display: table-cell;
+  vertical-align: middle;
   width: 50%;
 }
